[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scripts/Enemies/Big Zombie.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Textures/Enemies/ProgressBarTheme.tres" type="Theme" id=4]
[ext_resource path="res://Textures/Enemies/Big Zombie.png" type="Texture" id=5]
[ext_resource path="res://Textures/Enemies/Hitflash.gdshader" type="Shader" id=6]

[sub_resource type="ShaderMaterial" id=11]
resource_local_to_scene = true
shader = ExtResource( 6 )
shader_param/hit_opacity = 0.0

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 34 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 32, 34 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 32, 34 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 32, 34 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 32, 34 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 160, 0, 32, 34 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 32, 34 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 224, 0, 32, 34 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "Run",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 8.75, 13.25 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 9, 13.5 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 9, 13.5 )

[node name="Big Zombie" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 8
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 11 )
frames = SubResource( 9 )
animation = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3.5 )
shape = SubResource( 10 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 2
collision_mask = 192
knockbackResistance = 100
invincibilityTime = 0.4

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, 3.5 )
shape = SubResource( 12 )

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
margin_left = -8.0
margin_top = -9.33333
margin_right = 19.0
margin_bottom = -7.33333
rect_scale = Vector2( 0.6, 1 )
theme = ExtResource( 4 )
value = 100.0
percent_visible = false

[node name="Tween" type="Tween" parent="ProgressBar"]

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Hitbox" parent="." instance=ExtResource( 2 )]
collision_layer = 32
collision_mask = 4
damage = 30
knockbackStrength = 100

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, 3.5 )
shape = SubResource( 13 )

[node name="LineOfSight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 250, 0 )
collision_mask = 9

[node name="ChargeTween" type="Tween" parent="."]

[node name="MonsterPosition" type="Position2D" parent="."]
position = Vector2( 0, 26.5 )

[node name="MonsterPosition2" type="Position2D" parent="."]
position = Vector2( 0, -20.75 )

[connection signal="body_entered" from="Hurtbox" to="." method="_on_Hurtbox_body_entered"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
